# langchain-pocs

./: .env.example  .gitignore  00_START_HERE.md  AMELIORATIONS_LISIBILITE.md  CALLBACKS_SOLUTION.md  CLAUDE.md  CORRECTIFS_APPLIQUES.md  DECISIONS_LOG.md  DELIVERY_SUMMARY.md  IMPLEMENTATION_GUIDE.md  PHASE_1_ACTION_PLAN.md  PHASE_1_DAILY_TRACKER.md  PHASE_1_EXECUTION_TEMPLATES.md  PIPELINE_EXECUTOR_SUMMARY.md  PLANNING.md  PRD_TERRAFORM_ARCHITECT.md  README.md  REFERENCES_FORBIDDEN_PATTERNS.md  SECURITY_FIXES.md  SESSION_SUMMARY.md  TEMPLATES_CODE_REVIEW_REPORT.md  found_rules.md  pyproject.toml  test.json  test_model_routing.py  test_tools_security.py
docs/: LANGFUSE_INTEGRATION.md  cloud-storage.md  structure.md  terraform-module.md
docs-init/: callbacks-approach.md  industrialization-roadmap.md  model-routing.md  pipeline-executor.md  structure.md
eval/: CALLBACKS_EXAMPLE.md  evaluator.py  harness.py  test_cases.py
notebooks/: callbacks_demo.ipynb  chromadb_explorer.ipynb  deepchain-terraform-assistant.ipynb  deepchain_terraform_assistant.ipynb  langchain-anthropic.ipynb  langchain-fibonnaci.ipynb  pipeline_executor_demo.ipynb  terraform_code_review.ipynb  terraform_generator.ipynb  terraform_reviewer.ipynb  token_analysis.ipynb
prompts/: review-response-compliant.md  review-response-with-fixes.md  review-system.md  terraform-evaluation.md  terraform-generator.md  terraform-review.md  terraform-reviewer.md  terraform-system-v2.md  terraform-system.md  terraform-user.md  terraform-validate.md
rules/: CATEGORIES.md  NEW_RULES_SUMMARY.md  README.md  (+41 more)
(+17 files in other folders)
