[project]
name = "test-langchain"
version = "0.1.0"
description = "Terraform code generation and validation agent using LangChain and Claude"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arize-phoenix>=15.4.0",
    "arize-phoenix-otel>=0.6.0",
    "chromadb>=1.5.8",
    "deepagents>=0.5.4",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.0",
    "isort>=8.0.1",
    "langchain>=1.2.15",
    "langchain-anthropic>=1.4.2",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.1.0",
    "langsmith[claude-agent-sdk]>=0.7.38",
    "matplotlib>=3.10.9",
    "mypy>=2.0.0",
    "numpy>=2.4.4",
    "openinference-instrumentation-langchain>=0.1.0",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
]
